# comfyui_HiDream-Sampler

./: __init__.py  hidreamsampler.py  pyproject.toml  requirements.txt
hidreamsampler/: __init__.py  config.py  helpers.py  registration.py
hidreamsampler/nodes/: hidream_base.py  hidream_img2img.py  hidream_sampler.py  hidream_sampler_advanced.py
